packages/concerto-cto/test/cto/bad/self-extending-concept.bad.cto
namespace com.acme@1.0.0

concept Self_Extending extends Self_Extending {
  o String foo optional
}
